fix(admin): 修复后端启动扫描与构建流程